--- a/storage/app/private/website-build-development/tekmountain-com/package.json
+++ b/storage/app/private/website-build-development/tekmountain-com/package.json
@@ -3,16 +3,17 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"development": "vite build",
-		"staging": "vite build",
-		"production": "vite build",
-		"build": "vite build",
-		"preview": "vite preview"
+		"local": "NODE_ENV=local VITE_ENV=local vite build",
+		"development": "NODE_ENV=development vite build --mode development",
+		"staging": "NODE_ENV=staging vite build --mode staging",
+		"preview": "NODE_ENV=preview vite build --mode preview",
+		"production": "NODE_ENV=production vite build --mode production"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.46",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0",
+		"@sveltejs/adapter-static": "^1.0.1",
+		"@sveltejs/kit": "^1.0.7",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.18",
 		"postcss-load-config": "^4.0.1",
@@ -21,7 +22,7 @@
 		"sass": "^1.55.0",
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^4.10.7",
-		"vite": "^3.1.0"
+		"vite": "^4.0.0"
 	},
 	"type": "module"
 }
