--- a/content/trees/collections/website.yaml
+++ b/content/trees/collections/website.yaml
@@ -9,3 +9,5 @@ tree:
             entry: f9c3bdc2-d09f-4563-8e9f-bf48a9e6245a
   -
     entry: e25d3846-1644-4294-9bab-fbe693a12b04
+  -
+    entry: 8fe0f1f3-c0b7-4b5e-9483-a18722504c5d
